...
  handlePressPrint = ()=>{
    this.hideSideMenu()
    printerScreen()
  }
  handlePressCustomer = ()=>{
    this.hideSideMenu()
    customerScreen()
  }
  

  render() {
    return (
      <ScrollView style={styles.container}>
         <View style={styles.header}>
           <Image testID="drawerLogo" source={Images.logoLogin} style={styles.logo} />
         </View>
          <DrawerButton testID="orderlistDrawerButton" text="Orders"  icon="tag" onPress={this.handlePressOrders} />
          <DrawerButton testID="customerDrawerButton" text="Customers" icon="user" onPress={this.handlePressCustomer} />

          <DrawerButton testID="entitiesDrawerButton" text="Attendance" icon="calendar" onPress={this.handlePressAttendance} />
          {/* <DrawerButton testID="settingsDrawerButton" text="Settings" onPress={this.handlePressSettings} /> */}
          {/* <DrawerButton testID="changePasswordDrawerButton" text="Change Password" onPress={this.handlePressChangePassword} /> */}
          <DrawerButton testID="printerDrawerButton" text="Print" icon="check" onPress={this.handlePressPrint} />

          <DrawerButton testID="logoutDrawerButton" text="Logout" icon="logout" onPress={this.handlePressLogout} />

...
