...
                      //   text: 'Dashboard',
                      //   color: Colors.primary,
                      // },
                      // elevation: 0,
                      // leftButtons: [
                      //   {
                      //     id: 'menuButton',
                      //     icon: Images.menuIcon,
                      //     testID: 'menuButton',
                      //     color: Colors.primary,
                      //   },
                      // ],
                      // rightButtons: [
...
